feat: endpoint innecesario
